--- a/docs/output.css
+++ b/docs/output.css
@@ -1003,6 +1003,10 @@ video {
   width: 100vw;
 }
 
+.w-\[calc\(100\%-2\.5rem\)\] {
+  width: calc(100% - 2.5rem);
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -1165,6 +1169,10 @@ video {
   flex-direction: column;
 }
 
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
 .place-content-center {
   place-content: center;
 }
@@ -1179,6 +1187,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.items-stretch {
+  align-items: stretch;
 }
 
 .justify-start {
@@ -2227,12 +2239,24 @@ video {
     flex-direction: row-reverse;
   }
 
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
+  .md\:flex-col-reverse {
+    flex-direction: column-reverse;
+  }
+
   .md\:justify-start {
     justify-content: flex-start;
   }
 
   .md\:justify-end {
     justify-content: flex-end;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
   }
 
   .md\:gap-8 {
