--- a/docs/output.css
+++ b/docs/output.css
@@ -641,6 +641,11 @@ video {
   right: -0.5rem;
 }
 
+.-inset-y-2 {
+  top: -0.5rem;
+  bottom: -0.5rem;
+}
+
 .-inset-y-3 {
   top: -0.75rem;
   bottom: -0.75rem;
@@ -792,6 +797,10 @@ video {
 
 .grid {
   display: grid;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-1 {
@@ -1121,24 +1130,6 @@ video {
 .scale-y-50 {
   --tw-scale-y: .5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-@keyframes gradient-shift {
-  0% {
-    --tw-gradient-via-position: 25%;
-  }
-
-  50% {
-    --tw-gradient-via-position: 75%;
-  }
-
-  100% {
-    --tw-gradient-via-position: 25%;
-  }
-}
-
-.animate-gradient-shift {
-  animation: gradient-shift 1s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 .resize {
@@ -1575,6 +1566,11 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -2151,6 +2147,26 @@ video {
 @media (min-width: 768px) {
   .md\:order-last {
     order: 9999;
+  }
+
+  .md\:col-span-15 {
+    grid-column: span 15 / span 15;
+  }
+
+  .md\:col-span-4 {
+    grid-column: span 4 / span 4;
+  }
+
+  .md\:col-span-16 {
+    grid-column: span 16 / span 16;
+  }
+
+  .md\:col-span-14 {
+    grid-column: span 14 / span 14;
+  }
+
+  .md\:col-span-5 {
+    grid-column: span 5 / span 5;
   }
 
   .md\:mb-0 {
