--- a/docs/output.css
+++ b/docs/output.css
@@ -557,12 +557,9 @@ video {
 }
 
 .embla__dot--selected::after {
-  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
-  --tw-gradient-from: #9333ea var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(147 51 234 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
   content: var(--tw-content);
-  --tw-gradient-to: #d946ef var(--tw-gradient-to-position);
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 70 239 / var(--tw-bg-opacity));
 }
 
 .link {
@@ -719,24 +716,24 @@ video {
   z-index: 1;
 }
 
-.order-last {
-  order: 9999;
-}
-
-.order-first {
-  order: -9999;
+.-order-1 {
+  order: -1;
 }
 
 .order-1 {
   order: 1;
 }
 
-.-order-1 {
-  order: -1;
+.order-last {
+  order: 9999;
 }
 
 .col-span-1 {
   grid-column: span 1 / span 1;
+}
+
+.col-span-18 {
+  grid-column: span 18 / span 18;
 }
 
 .col-span-19 {
@@ -1500,6 +1497,10 @@ video {
   background-repeat: no-repeat;
 }
 
+.fill-main-light {
+  fill: #d946ef;
+}
+
 .fill-main-light\/70 {
   fill: rgb(217 70 239 / 0.7);
 }
@@ -2161,10 +2162,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:order-last {
-    order: 9999;
-  }
-
   .md\:col-span-14 {
     grid-column: span 14 / span 14;
   }
@@ -2181,8 +2178,8 @@ video {
     display: grid;
   }
 
-  .md\:h-10 {
-    height: 2.5rem;
+  .md\:h-16 {
+    height: 4rem;
   }
 
   .md\:h-20 {
@@ -2193,20 +2190,20 @@ video {
     height: 1rem;
   }
 
-  .md\:h-40 {
-    height: 10rem;
+  .md\:h-44 {
+    height: 11rem;
   }
 
   .md\:h-\[12rem\] {
     height: 12rem;
   }
 
-  .md\:h-nav-2x {
-    height: 6rem;
-  }
-
   .md\:h-nav {
     height: 3rem;
+  }
+
+  .md\:h-nav-2x {
+    height: 6rem;
   }
 
   .md\:w-1\/2 {
@@ -2215,10 +2212,6 @@ video {
 
   .md\:w-1\/3 {
     width: 33.333333%;
-  }
-
-  .md\:w-10 {
-    width: 2.5rem;
   }
 
   .md\:w-16 {
@@ -2249,10 +2242,6 @@ video {
 
   .md\:flex-row-reverse {
     flex-direction: row-reverse;
-  }
-
-  .md\:flex-col-reverse {
-    flex-direction: column-reverse;
   }
 
   .md\:justify-start {
@@ -2356,8 +2345,8 @@ video {
     margin-right: 1.25rem;
   }
 
-  .lg\:h-14 {
-    height: 3.5rem;
+  .lg\:h-10 {
+    height: 2.5rem;
   }
 
   .lg\:h-16 {
@@ -2372,8 +2361,8 @@ video {
     height: 12rem;
   }
 
-  .lg\:w-14 {
-    width: 3.5rem;
+  .lg\:w-10 {
+    width: 2.5rem;
   }
 
   .lg\:w-3\/5 {
@@ -2386,11 +2375,6 @@ video {
 
   .lg\:w-48 {
     width: 12rem;
-  }
-
-  .lg\:object-contain {
-    -o-object-fit: contain;
-       object-fit: contain;
   }
 
   .lg\:text-2xl {
